cmake_minimum_required(VERSION 2.8)
project (LuosuCompileProject C)
aux_source_directory(. DIR_SRCS)
list(REMOVE_ITEM DIR_SRCS "./text.c")
# message (">>> REMOVE_ITEM: ${DIR_SRCS}")
add_subdirectory(helpers)
add_executable(LuosuCompileProject ${DIR_SRCS})
target_link_libraries(LuosuCompileProject Helpers)
SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CFLAGS} -O0 -Wall -g2 -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CFLAGS} -O3 -Wall")
